--- a/style/products_and_services.css
+++ b/style/products_and_services.css
@@ -153,6 +153,7 @@
     font-size: 1.5vh;
     text-align: center;
     color: #9F6000;
+    cursor: pointer;
 }
 
 .card_white .products_and_services_button button {
@@ -333,5 +334,94 @@
 @media screen and (min-height: 1300px) {
     .line {
         height: 4vh;
+    }
+}
+@media (min-height: 400px) {
+    .card {
+        height: 40vh;
+    }
+    .products_and_services {
+        height: 120vh;
+    }
+    .products_and_services_container {
+        height: 120vh;
+    }
+}
+@media (min-height: 400px) and (min-width: 1100px){
+    .card {
+        height: 50vh;
+    }
+    .products_and_services {
+        height: 135vh;
+    }
+    .products_and_services_container {
+        height: 135vh;
+    }
+}
+@media (min-height: 750px) and (min-width: 1100px){
+    .card {
+        height: 45vh;
+    }
+}
+@media (min-height: 400px) and (max-width: 600px){
+    .products_and_services {
+        height: 155vh;
+    }
+}
+@media (min-height: 400px) and (max-width: 450px){
+    .card {
+        height: 33vh;
+    }
+}
+@media (min-height: 1000px) and (min-width: 750px){
+    .card {
+        height: 30vh;
+    }
+    .products_and_services {
+        height: 90vh;
+    }
+    .products_and_services_container{
+        height: 90vh;
+    }
+}
+@media (min-height: 1000px) and (min-width: 1100px){
+    .card {
+        height: 35vh;
+    }
+    .products_and_services {
+        height: 100vh;
+    }
+    .products_and_services_container{
+        height: 100vh;
+    }
+}
+@media (min-height: 700px) and (max-width: 600px){
+    .products_and_services {
+        height: 135vh;
+    }
+    .products_and_services_container{
+        height: 135vh;
+    }
+    .card {
+        height: 35vh;
+    }
+}
+@media (min-height: 600px) and (max-width: 450px){
+    .products_and_services {
+        height: 135vh;
+    }
+    .products_and_services_container{
+        height: 135vh;
+    }
+}
+@media (min-height: 700px) and (max-width: 450px){
+    .card {
+        height: 30vh;
+    }
+    .products_and_services {
+        height: 120vh;
+    }
+    .products_and_services_container{
+        height: 120vh;
     }
 }
