--- a/style/price_list.css
+++ b/style/price_list.css
@@ -40,7 +40,7 @@
 .chapters {
     display: flex;
     justify-content: space-between;
-    width: 85%;
+    width: 100%;
     height: 6vh;
 }
 
@@ -49,7 +49,7 @@
     text-align: center;
     align-items: center;
     justify-content:center;
-    width: 18%;
+    width: 15%;
 
     opacity: 0.8;
     border-top-left-radius: 23px;
@@ -75,6 +75,9 @@
     background: linear-gradient(180deg, #FFC544 31.25%, #FFE385 100%);
 }
 .chapter_claydite_concrete{
+    background: linear-gradient(180deg, #FFC544 31.25%, #FFE385 100%);
+}
+.chapter_fbs{
     background: linear-gradient(180deg, #FFC544 31.25%, #FFE385 100%);
 }
 
@@ -201,6 +204,13 @@
     position: absolute;
     display: none;
 }
+.tabel_columns_fbs {
+    height: 30vh;
+    width: 100%;
+    overflow: auto;
+    position: absolute;
+    display: none;
+}
 .tabel_column_claydite_concrete {
     display: flex;
     text-align: center;
@@ -289,7 +299,7 @@
         width: 100%;
     }
     .chapter {
-        font-size: 1.4vw;
+        font-size: 1.2vw;
     }
     .names_tabel {
         font-size: 1.5vw;
@@ -321,7 +331,7 @@
         font-size: 2vw;
     }
     .chapter {
-        font-size: 1.7vw;
+        font-size: 1.3vw;
     }
     .names_tabel {
         font-size: 1.8vw;
