--- a/style/products_and_services.css
+++ b/style/products_and_services.css
@@ -163,6 +163,7 @@
 
 .products_and_services_text{
     width: 100%;
+    margin-top: 3vh;
     text-align: center;
     font-family: 'Ubuntu';
     font-weight: 400;
@@ -177,12 +178,16 @@
 
 .transition_2 {
     width: 100%;
-    height: 20vh;
+    height: 5vh;
     background-image: url(../img/price_bg.png);
     background-position: center center;  
     background-repeat: no-repeat;
     background-size: cover;
     box-sizing: border-box;
+}
+
+.card_last {
+    margin: 0 auto;
 }
 
 /* adaptive */
@@ -236,6 +241,7 @@
     }
     .products_and_services_text {
         font-size: 1.2vw;
+
     }
 }
 @media screen and (max-width: 850px) {
@@ -341,10 +347,10 @@
         height: 40vh;
     }
     .products_and_services {
-        height: 120vh;
+        height: 155vh;
     }
     .products_and_services_container {
-        height: 120vh;
+        height: 155vh;
     }
 }
 @media (min-height: 400px) and (min-width: 1100px){
@@ -352,10 +358,10 @@
         height: 50vh;
     }
     .products_and_services {
-        height: 135vh;
+        height: 190vh;
     }
     .products_and_services_container {
-        height: 135vh;
+        height: 190vh;
     }
 }
 @media (min-height: 750px) and (min-width: 1100px){
@@ -378,10 +384,10 @@
         height: 30vh;
     }
     .products_and_services {
-        height: 90vh;
+        height: 130vh;
     }
     .products_and_services_container{
-        height: 90vh;
+        height: 130vh;
     }
 }
 @media (min-height: 1000px) and (min-width: 1100px){
@@ -389,18 +395,18 @@
         height: 35vh;
     }
     .products_and_services {
-        height: 100vh;
+        height: 135vh;
     }
     .products_and_services_container{
-        height: 100vh;
+        height: 135vh;
     }
 }
 @media (min-height: 700px) and (max-width: 600px){
     .products_and_services {
-        height: 135vh;
+        height: 170vh;
     }
     .products_and_services_container{
-        height: 135vh;
+        height: 170vh;
     }
     .card {
         height: 35vh;
@@ -408,10 +414,10 @@
 }
 @media (min-height: 600px) and (max-width: 450px){
     .products_and_services {
-        height: 135vh;
+        height: 165vh;
     }
     .products_and_services_container{
-        height: 135vh;
+        height: 165vh;
     }
 }
 @media (min-height: 700px) and (max-width: 450px){
@@ -419,9 +425,9 @@
         height: 30vh;
     }
     .products_and_services {
-        height: 120vh;
+        height: 150vh;
     }
     .products_and_services_container{
-        height: 120vh;
+        height: 150vh;
     }
 }
