--- a/style/products_and_services.css
+++ b/style/products_and_services.css
@@ -431,3 +431,9 @@
         height: 150vh;
     }
 }
+
+@media (min-height: 800px) and (min-width: 1600px){
+    .card {
+        height: 40vh;
+    }
+}
