--- a/style/products_and_services.css
+++ b/style/products_and_services.css
@@ -379,15 +379,30 @@
         height: 33vh;
     }
 }
-@media (min-height: 1000px) and (min-width: 750px){
+@media (min-height: 850px) and (min-width: 700px) and (max-width: 900px){
     .card {
-        height: 30vh;
+        height: 36vh;
     }
     .products_and_services {
-        height: 130vh;
+        height: 145vh;
     }
     .products_and_services_container{
-        height: 130vh;
+        height: 145vh;
+    }
+    .type_name {
+        font-size: 1.8vw;
+    }
+    .card_info {
+        font-size: 1.6vw;
+    }
+    .list {
+        font-size: 1.5vw;
+    }
+    .price {
+        font-size: 1.5vw;
+    }
+    .products_and_services_button {
+        height: 4vh;
     }
 }
 @media (min-height: 1000px) and (min-width: 1100px){
